fix layout shift

--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -93,4 +93,7 @@
     .sizeDefault {
         padding: 8px 24px;
     }    
+    .sizeBig {
+        font-size: 20px;
+    }
 }
