--- a/src/components/Hero/index.module.css
+++ b/src/components/Hero/index.module.css
@@ -5,6 +5,9 @@
     min-height: 100vh;
     max-height: 100vh;
 }
+.container img {
+    object-position: left top;
+}
 
 .alrosa {
     position: absolute;
@@ -20,8 +23,8 @@
     display: flex;
     flex-flow: column;
     align-items: flex-end;
+    justify-content: space-between;
     margin-right: 12rem;
-    margin-bottom: 10rem;
 }
 
 .text {
@@ -50,11 +53,11 @@
 .h1 > h1 {
     color: white;
     margin-top: 0;
-    margin-bottom: 12rem;
 
     display: flex;
     flex-flow: column;
     gap: 6px;
+    margin-bottom: 8rem;
 }
 .h1 > h1 > div:not(:first-child) {
     font-size: 45px;
@@ -66,8 +69,15 @@
     .container {
         max-height: unset;
     }
+    .container img {
+        object-position: unset;
+    }
     .up {
         margin-right: 4rem;
+        margin-bottom: 12rem;
+    }
+    .h1 > h1 {
+        margin-bottom: 4rem;
     }
 }
 
@@ -80,12 +90,10 @@
     .h1 {
         padding-top: 2rem;
     }
-    .h1 > h1 {
-        margin-bottom: 4rem;
+    .description {
+        padding: 20px;
     }
-
-    /* .h1 > h1 > div:not(:first-child) {
-        font-size: 16px;
-        line-height: 16px;
-    } */
+    .alrosa {
+        max-width: calc(100vw - 40px);
+    }
 }
