--- a/src/components/Title/styles.module.css
+++ b/src/components/Title/styles.module.css
@@ -40,13 +40,9 @@
 
 
 @media screen and (max-width: 480px) {
-    /* .h1 {
-        font-size: 36px;
-        line-height: 38px;
+    .h1 {
+        font-size: 52px;
+        line-height: 54px;
     }
-    .h2 {
-        font-size: 36px;
-        line-height: 38px;
-    } */
 }
 
